# AgentQA

./: .dockerignore  .gitignore  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  README.md  docker-compose.yml  pytest.ini
backend/backend/: Dockerfile  requirements-dev.txt  requirements.txt
backend/backend/alembic/: env.py
backend/backend/alembic/versions/: 0001_legacy_baseline.py  0002_production_evaluation_platform.py  (+1 more)
backend/backend/app/: __init__.py  main.py  worker.py
backend/backend/tests/: conftest.py  test_agent_behavior.py  test_api.py  test_config.py  test_evaluation_primitives.py  test_evaluator.py  test_migrations.py  test_persistence_api_features.py  test_providers.py  test_seed_management.py  test_semantic_judge_provider.py  test_structured_evaluator.py  test_tools.py
backend/frontend/: Dockerfile  streamlit_app.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/agentqa/: app-shell.tsx  batch-view.tsx  dashboard-view.tsx  evaluation-panels.test.tsx  evaluation-panels.tsx  library-view.tsx  runner-view.tsx  settings-view.tsx  shared.tsx  traces-view.tsx
frontend/e2e/: happy-path.spec.ts
frontend/lib/agentqa/: api.test.ts  api.ts  engine.ts  run-mode.test.ts  run-mode.ts  seed.ts  store.test.tsx  store.tsx  tool-labels.ts  types.ts
frontend/test/: setup.ts
scripts/: package-source.sh
(+34 files in other folders)
